# cognius

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  SECURITY.md
.github/workflows/: rust-clippy.yml
examples/: linear.rs  matmul.rs  mlp.rs  mlp2.rs  simple.rs  tmp.rs  value_mlp.rs
src/: backward.rs  data.rs  lib.rs  linalg.rs  main.rs  module.rs  nn.rs  op.rs  optim.rs  tensor.rs  tensor_data.rs  value.rs
src/data/: data.rs  dataloader.rs  dataset.rs
src/linalg/: product.rs
src/nn/: criterions.rs  functional.rs  linear.rs  optim.rs
src/optim/: sgd.rs
tests/: activations_test.rs  backward_test.rs  data_test.rs  linalg_test.rs  optim_test.rs  tensor_test.rs
